# garou

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  高速化・リファクタリング案.md
README/: 5W1H.md  Plan.md  README-ja.md  todo.md  今後のプロジェクト.md
agents/: AGENTS.md  EVALUATION.md  REFACTORING_ROADMAP.md  Rust.md  projectmanagement.md  tools.md
agents/リファクタリング/: EVALUATION.md
create_px/: .gitignore  block.py  pyproject.toml  solid.py
src/: main.rs
src/core/: mod.rs
src/model/: config.rs
src/tui/: debounce.rs  image_pipeline.rs  input.rs  mod.rs  render.rs  runtime.rs  state.rs  viewer.rs
src/tui/input/: clear.rs  input_move.rs  open.rs  pan.rs  sort.rs  zoom.rs
src/tui/render/: filetree.rs  header.rs  image.rs  message.rs  overlay.rs  statusbar.rs
src/tui/render/image/: difference.rs  layout.rs  protocol.rs  resize.rs  state.rs  transport.rs
src/tui/viewer/: event_dispatch.rs  loop_control.rs  loop_support.rs  render.rs  worker.rs
